httpserver/deployment/deployment.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
      - image: winter2023/httpserver:52434ef
        name: httpserver
        args:
        - --config
        - /tmp/config/config.toml
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: "1"
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8888
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: httpserver-config
          mountPath: /tmp/config
      volumes:
      - name: httpserver-config
        configMap:
          name: httpserver-config
---
# service
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  ports:
  - name: httpserver
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: httpserver
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - cncamp.com
    secretName: cncamp-tls
  rules:
    - host: cncamp.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpserver
                port:
                  number: 8888
